--- a/app/src/main/res/values-ur-rPK/strings.xml
+++ b/app/src/main/res/values-ur-rPK/strings.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Fruit Sabzi Mandi</string>
-    <string name="intro">Application is developed by Mahmood Yousaf</string>
-    <string name="wellcome">WelCome to Fruit Sabzi Mandi</string>
-    <string name="commissionShop">Commission Shop Dashboard</string>
-    <string name="farmerDashboard">Farmer Dashboard</string>
+    <string name="app_name">پھل سبزی منڈی</string>
+    <string name="intro">ایپ کو محمود یوسف نے تیار کیا ہے</string>
+    <string name="wellcome">ویلکوم فروٹ سبزی منڈی</string>
+    <string name="commissionShop">کمیشن شاپ ڈیش بورڈ</string>
+    <string name="farmerDashboard">کسان ڈیش بورڈ</string>
+    <string name="English">انگریزی</string>
+    <string name="Urdu">اردو</string>
     <string name="Login">Login Now</string>
     <string name="Signup">Signup here</string>
     <string name="LoginDetail">Please Login to continue</string>
@@ -13,6 +15,4 @@
     <string name="AlreadyAccount">Already have account? Login</string>
     <string name="dailyQuizes">Daily Quizes Subject Wise</string>
     <string name="course_name">None</string>
-    <string name="English">English</string>
-    <string name="Urdu">Urdu</string>
 </resources>
