--- a/app/src/main/res/values-ur-rPK/strings.xml
+++ b/app/src/main/res/values-ur-rPK/strings.xml
@@ -18,4 +18,8 @@
     <string name="hintConformPassword">براہ کرم یہاں اپنا پاس ورڈ دوبارہ درج کریں</string>
     <string name="SignupButton">سائن اپ</string>
     <string name="LoginButton">لاگ ان کریں</string>
+    <string name="Next">اگلے کے لئے کلک کریں</string>
+    <string name="shopName">براہ کرم اپنی دکان کا نام درج کریں</string>
+    <string name="location">براہ کرم اپنا مقام درج کریں</string>
+    <string name="phone">Please enter your phone number</string>
 </resources>
