--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="location">Please enter your location</string>
     <string name="phone">Please enter your phone number</string>
     <string name="Urdu">اردو</string>
+    <string name="select">Select Image from Gallery</string>
+    <string name="upload">Click to upload image</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
